# Python_practice

./: .gitignore
CursoFlaskNL/firstapp/: app.py  app_2.py
arjan_youtube/designer_mindset/: list.py  main.py
arjan_youtube/protocols/: protocol_as_abc_issues.py  protocol_example.py  tempCodeRunnerFile.py
entornos/: README.md  pyproject.toml  ruff.toml  tox.ini
entornos/my_project/: __init__.py  main.py
entornos/tests/: test_main.py
fastapiacc/: app.py
oopmasterclass/: abstraction.py  dataclasses_1.py  deskriptors.py  enumeraciones.py  getters_setters.py  inheritance.py  mixing.py  patterns.py  pydantic_oop.py  slots.py
pydantic/: enums.py  errores.py  prueba.py
udemy_azzurro/: abstract.py  errores.py  filter.py  herencia.py  listas.py  protocols.py
